--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -14,6 +14,7 @@ sourceSets.main.java.srcDir "$projectDir/src/main/java"
 
 ext {
 	set('springfoxVersion', '2.9.2')
+	set('mapStructVersion', '1.5.0.Beta2')
 }
 
 configurations {
@@ -29,9 +30,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation "org.mapstruct:mapstruct:${mapStructVersion}"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+	compileOnly 'org.projectlombok:lombok'
 
 	/* For Open API autogeneration */
 	compileOnly "org.springframework.data:spring-data-commons"
