--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.data.mongodb.username=dev
 spring.data.mongodb.password=123qweASD
 spring.data.mongodb.database=contact
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
 server.port=8080
